# simExtURLDrop

./: CMakeLists.txt  callbacks.xml  eventfilter.cpp  eventfilter.h  filedownloader.cpp  filedownloader.h  license.txt  plugin.cpp  plugin.h  simAddOnURL drop service.lua  simURLDrop.lua
sourceCode/: callbacks.xml
